data/derived/comb/progs/unify/prog5549.ml.out
Characters 115-126:
  if( h = (endChar t) ) then
          ^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a list
